Strengthen YAML-driven processor contract tests